--- a/responsiveHero/index.html
+++ b/responsiveHero/index.html
@@ -27,7 +27,7 @@
         <header>
             <a href="#" class="logo">COC-STATS</a>
 
-            <ul>
+            <ul class="navlist">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Clans</a></li>
@@ -37,6 +37,7 @@
             </ul>
         </header>
 
+        <div class="bx bx-menu" id="menu-icon"></div>
 
         <!-- custom script -->
         <script src="js/script.js" ></script>
